# midi_playground

./: .gitmodules  CMakeLists.txt  app.cpp  app.h  main.cpp
imgui/: CMakeLists.txt
